FEA | Add repeatEvent create api